--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,17 @@
+@import url("styles/header.css");
+@import url("styles/banner.css");
+
 :root {
     --cor-de-fundo: #EBECEE;
+    --branco: #FFFFFF;
+    --laranja: #EB9B00;
+    --azul-degrade: linear-gradient(97.54deg, #002f52 35.49%, #326589 165.37%);
+    --fonte-pricipal: "Poppins";
 }
 
 body {
     background-color: var(--cor-de-fundo);
-}
-
-h1 {
-    background-color: white;
+    font-family: var(--fonte-pricipal);
+    font-size: 16px;
+    font-weight: 400;
 }
