--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@
     --laranja: #EB9B00;
     --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
     --fonte-pricipal: "Poppins";
+    --azul: #002f52;
 }
 
 body {
